# ConfigEditor

./: pyproject.toml  readme.md  requirements.txt
ConfigEditor/: Sample.py  color_file.py  config_file.py  config_item.py  data_manager.py  item_widget.py  json_config.py  recent_files.py  settings_widget.py  structured_text.py  yaml_config.py
ConfigEditor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: conf.py  index.rst  modules.rst  readme.md
docs/_build/html/: .buildinfo  config_file.html  data_manager.html  genindex.html  index.html  item_widget.html  json_config.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  settings_widget.html  structured_text.html  yaml_config.html
docs/_build/html/.doctrees/: data_manager.doctree  environment.pickle  index.doctree  item_widget.doctree  modules.doctree  readme.doctree  settings_widget.doctree  structured_text.doctree  yaml_config.doctree
docs/_build/html/_modules/: config_file.html  data_manager.html  index.html  item_widget.html  json_config.html  settings_widget.html  structured_text.html  yaml_config.html
docs/_build/html/_sources/: config_file.rst.txt  data_manager.rst.txt  index.rst.txt  modules.rst.txt
tests/: Sample.py  complex.yml  complex2.yml  sample.json  sample.yml  test.yml  test_color_ramp.py  test_config.py  test_data_manager.py  test_interpolate.py  test_item_widget.py  test_list_data_manager.py  test_structured_text.py  test_yaml_config.py
